--- a/src/dune
+++ b/src/dune
@@ -1,9 +1,7 @@
 (library
  (name longleaf)
  (public_name longleaf)
- (libraries
-   pyml
- )
+ (libraries pyml containers containers-data)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
