--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,5 @@ export LD_LIBRARY_PATH=${CONDA_PREFIX}/lib:${LD_LIBRARY_PATH}
 export APCA_API_KEY_ID=PKX71JSSCPYNYGR57641
 export APCA_API_SECRET_KEY=IvLqehgJeQQ9bzQh8eKbxtZ4Ao8JepzkXNXfFmtH
 export APCA_API_BASE_URL=https://paper-api.alpaca.markets/v2
+export APCA_API_DATA_URL=https://data.alpaca.markets/v2
 mamba activate finance
