--- a/src/dune
+++ b/src/dune
@@ -12,6 +12,7 @@
   angstrom
   cohttp-lwt-unix
   calendar
+  bogue
   lwt)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
