--- a/src/dune
+++ b/src/dune
@@ -13,6 +13,7 @@
   cohttp-lwt-unix
   calendar
   bogue
+  dream
   lwt)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
