--- a/src/dune
+++ b/src/dune
@@ -14,6 +14,7 @@
   calendar
   bogue
   dream
+  domainslib
   lwt)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
