--- a/src/dune
+++ b/src/dune
@@ -15,7 +15,8 @@
   bogue
   dream
   domainslib
-  lwt)
+  lwt
+  eio)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
