--- a/src/dune
+++ b/src/dune
@@ -14,9 +14,9 @@
   calendar
   bogue
   dream
-  domainslib
   lwt
-  eio)
+  eio_main
+  lwt_eio)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
