--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,6 @@
 (executables
- (names main gui server)
- (public_names main gui server)
+ (names gui server)
+ (public_names gui server)
  (promote
   (until-clean)
   (into ..))
