feat: try using piaf instead of cohttp, wip removing lwt

--- a/src/dune
+++ b/src/dune
@@ -17,6 +17,7 @@
   lwt
   eio_main
   tyxml
+  piaf
   lwt_eio)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
