chore: remove unnecessary dependencies

--- a/src/dune
+++ b/src/dune
@@ -13,11 +13,9 @@
   calendar
   bogue
   dream
-  lwt
   eio_main
   tyxml
-  piaf
-  lwt_eio)
+  piaf)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
