--- a/bin/dune
+++ b/bin/dune
@@ -13,13 +13,11 @@
   containers
   containers-data
   zarith
-  ezcurl-lwt
   ptime
   yojson
   bogue
   dream
-  eio_main
-  lwt_eio)
+  eio_main)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv)))
 
