--- a/src/dune
+++ b/src/dune
@@ -15,7 +15,12 @@
   tyxml
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv ppx_deriving_decoders)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   ppx_deriving_decoders)))
 
 (env
  (_
