feat: add bin/shutdown.ml

--- a/bin/dune
+++ b/bin/dune
@@ -1,7 +1,7 @@
 (executables
- (names main data_downloader)
+ (names main data_downloader shutdown)
  (modes native)
- (public_names main data_downloader)
+ (public_names main data_downloader shutdown)
  (promote
   (until-clean)
   (into ..))
