feat: updates to dune-project/dune files

--- a/src/dune
+++ b/src/dune
@@ -20,8 +20,7 @@
    ppx_deriving.std
    ppx_yojson_conv
    ppx_variants_conv
-   ppx_fields_conv
-   ppx_deriving_decoders)))
+   ppx_fields_conv)))
 
 (env
  (_
