feat: helpful failure if environment variables fail, opam update

--- a/src/dune
+++ b/src/dune
@@ -16,11 +16,7 @@
   tyxml
   piaf)
  (preprocess
-  (pps
-   ppx_deriving.std
-   ppx_yojson_conv
-   ppx_variants_conv
-   ppx_fields_conv)))
+  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
 (env
  (_
