--- a/longleaf.opam
+++ b/longleaf.opam
@@ -17,15 +17,21 @@ depends: [
   "tsort"
   "uuidm"
   "ptime"
+  "calendar"
+  "owl"
+  "tyxml"
   "yojson" {>= "1.6"}
   "ppx_yojson_conv"
   "ppx_deriving"
+  "dream"
   "ppx_variants_conv"
   "ppx_fields_conv"
   "cmdliner"
   "ocamlgraph"
   "alcotest"
   "lwt"
+  "eio_main"
+  "piaf"
   "fileutils"
   "ocamlformat"
   "alcotest"
