--- a/src/dune
+++ b/src/dune
@@ -15,9 +15,16 @@
   iter
   cmdliner
   tyxml
+  landmarks
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   landmarks-ppx
+   --auto)))
 
 (env
  (_
