--- a/src/dune
+++ b/src/dune
@@ -19,6 +19,8 @@
    ppx_yojson_conv
    ppx_variants_conv
    ppx_fields_conv
+   ; landmarks-ppx
+   ; --auto)))
    landmarks-ppx
    --auto)))
 
@@ -38,12 +40,14 @@
    -safe-string)))
 
 (rule
+ (mode (promote (until-clean)))
  (targets template.ml)
  (deps template.eml.html)
  (action
   (run dream_eml %{deps} --workspace %{workspace_root})))
 
 (rule
+ (mode (promote (until-clean)))
  (targets multitemplate.ml)
  (deps multitemplate.eml.html)
  (action
