chore: disable landmarks

--- a/src/dune
+++ b/src/dune
@@ -14,15 +14,10 @@
   landmarks
   piaf)
  (preprocess
-  (pps
-   ppx_deriving.std
-   ppx_yojson_conv
-   ppx_variants_conv
-   ppx_fields_conv
-   ; landmarks-ppx
-   ; --auto)))
-   landmarks-ppx
-   --auto)))
+  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
+
+; landmarks-ppx
+; --auto)))
 
 (env
  (_
