chore: dont promote templates

--- a/src/dune
+++ b/src/dune
@@ -35,16 +35,16 @@
    -safe-string)))
 
 (rule
- (mode
-  (promote (until-clean)))
+ ; (mode
+ ;  (promote (until-clean)))
  (targets template.ml)
  (deps template.eml.html)
  (action
   (run dream_eml %{deps} --workspace %{workspace_root})))
 
 (rule
- (mode
-  (promote (until-clean)))
+ ; (mode
+ ;  (promote (until-clean)))
  (targets multitemplate.ml)
  (deps multitemplate.eml.html)
  (action
