feat: move strategies to own library

--- a/src/strategies/dune
+++ b/src/strategies/dune
@@ -31,8 +31,8 @@
    -a+8
    -open
    Containers
+   -open Longleaf
    -open
    Ppx_yojson_conv_lib.Yojson_conv.Primitives
    -strict-sequence
    -safe-string)))
-
