fix: ticker yield, profiling

--- a/src/dune
+++ b/src/dune
@@ -15,7 +15,13 @@
   owl
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv landmarks-ppx --auto)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   landmarks-ppx
+   --auto)))
 
 ; landmarks-ppx
 ; --auto)))
