--- a/strategies/dune
+++ b/strategies/dune
@@ -16,8 +16,13 @@
   longleaf
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv landmarks-ppx --auto
-)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   landmarks-ppx
+   --auto)))
 
 ; landmarks-ppx
 ; --auto)))
