--- a/strategies/dune
+++ b/strategies/dune
@@ -12,7 +12,7 @@
   cmdliner
   landmarks
   owl
-  longleaf
+  longleaf-lib
   piaf)
  (preprocess
   (pps
@@ -37,7 +37,7 @@
    -open
    Containers
    -open
-   Longleaf
+   Longleaf_lib
    -open
    Ppx_yojson_conv_lib.Yojson_conv.Primitives
    -strict-sequence
