--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library
- (name longleaf)
+ (name longleaf_lib)
  (modules :standard)
- (public_name longleaf)
+ (public_name longleaf-lib)
  (libraries
   fmt
   containers
