chore: src -> lib

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ main.exe
 data_downloader.exe
 shutdown.exe
 elisp/flycheck_top.el
-src/template.ml
-src/multitemplate.ml
-src/javascript/css.css
-src/javascript/plotly_latest.css
+lib/javascript/css.css
+lib/javascript/plotly_latest.css
 dune-odep.svg
