--- a/lib/dune
+++ b/lib/dune
@@ -2,6 +2,8 @@
  (name longleaf_lib)
  (modules :standard)
  (public_name longleaf-lib)
+ (instrumentation
+  (backend landmarks))
  (libraries
   fmt
   containers
@@ -14,13 +16,7 @@
   owl
   piaf)
  (preprocess
-  (pps
-   ppx_deriving.std
-   ppx_yojson_conv
-   ppx_variants_conv
-   ppx_fields_conv
-   landmarks-ppx
-   --auto)))
+  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
 ; landmarks-ppx
 ; --auto)))
