--- a/strategies/dune
+++ b/strategies/dune
@@ -2,6 +2,8 @@
  (name longleaf_strategies)
  (modules :standard)
  (public_name longleaf-strategies)
+ (instrumentation
+  (backend landmarks))
  (libraries
   fmt
   containers
@@ -15,36 +17,7 @@
   longleaf-lib
   piaf)
  (preprocess
-  (pps
-   ppx_deriving.std
-   ppx_yojson_conv
-   ppx_variants_conv
-   ppx_fields_conv
-   landmarks-ppx
-   --auto))
- (enabled_if
-  (= %{profile} debug)))
-
-(library
- (name longleaf_strategies)
- (modules :standard)
- (public_name longleaf-strategies)
- (libraries
-  fmt
-  containers
-  containers-data
-  ptime
-  eio_main
-  iter
-  cmdliner
-  landmarks
-  owl
-  longleaf-lib
-  piaf)
- (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv))
- (enabled_if
-  (= %{profile} dev)))
+  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
 (env
  (_
