--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ lib/javascript/plotly_latest.css
 dune-odep.svg
 data/sp100-12-2023.json
 data/sp100-2024.json
+data/24.json
+data/dec23.json
 _html/
