--- a/lib/dune
+++ b/lib/dune
@@ -16,7 +16,7 @@
   owl
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
+  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv ppx_deriving_decoders)))
 
 ; landmarks-ppx
 ; --auto)))
