fix: market data api query params

--- a/lib/dune
+++ b/lib/dune
@@ -16,7 +16,12 @@
   owl
   piaf)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv ppx_deriving_decoders)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   ppx_deriving_decoders)))
 
 ; landmarks-ppx
 ; --auto)))
