chore: add tacaml dependency

--- a/lib/dune
+++ b/lib/dune
@@ -14,6 +14,7 @@
   cmdliner
   landmarks
   owl
+  tacaml
   piaf)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
