--- a/longleaf-lib.opam
+++ b/longleaf-lib.opam
@@ -23,7 +23,7 @@ depends: [
   "ocamlgraph"
   "eio_main"
   "piaf"
-  "tacaml"
+  "ta_caml"
   "fileutils"
   "ocamlformat"
   "alcotest" {with-test}
