feat: attempt using new indicators

--- a/longleaf-lib.opam
+++ b/longleaf-lib.opam
@@ -23,7 +23,7 @@ depends: [
   "ocamlgraph"
   "eio_main"
   "piaf"
-  "ta_caml"
+  "tacaml"
   "fileutils"
   "ocamlformat"
   "alcotest" {with-test}
