feat: dune-project maintenance, opam files

--- a/lib/dune
+++ b/lib/dune
@@ -15,7 +15,8 @@
   landmarks
   owl
   tacaml
-  piaf)
+  piaf
+  yojson)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
