feat: add deriving hash

--- a/lib/dune
+++ b/lib/dune
@@ -21,7 +21,12 @@
   piaf
   yojson)
  (preprocess
-  (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
+  (pps
+   ppx_deriving.std
+   ppx_yojson_conv
+   ppx_variants_conv
+   ppx_fields_conv
+   ppx_hash)))
 
 ; landmarks-ppx
 ; --auto)))
