wip: try building

--- a/lib/backend/dune
+++ b/lib/backend/dune
@@ -1,7 +1,7 @@
 (library
- (name longleaf)
+ (name longleaf_backend)
  (modules :standard)
- (public_name longleaf-lib)
+ (public_name longleaf-lib.backend)
  (instrumentation
   (backend landmarks))
  (libraries
@@ -9,22 +9,14 @@
   longleaf_util
   longleaf_bars
   longleaf_indicators
-  longleaf_apis
   longleaf_state
-  longleaf_backend
-  longleaf_server
+  longleaf_apis
   fmt
   containers
   containers-data
   ptime
   eio_main
-  iter
-  uuidm
-  cmdliner
   landmarks
-  nx
-  tacaml
-  piaf
   yojson)
  (preprocess
   (pps
