--- a/lib/core/dune
+++ b/lib/core/dune
@@ -1,30 +1,19 @@
 (library
- (name longleaf)
+ (name longleaf_core)
  (modules :standard)
- (public_name longleaf-lib)
+ (public_name longleaf-lib.core)
  (instrumentation
   (backend landmarks))
  (libraries
-  longleaf_core
   longleaf_util
-  longleaf_bars
-  longleaf_indicators
-  longleaf_apis
-  longleaf_state
-  longleaf_backend
-  longleaf_server
   fmt
   containers
   containers-data
   ptime
-  eio_main
-  iter
   uuidm
   cmdliner
-  landmarks
-  nx
-  tacaml
   piaf
+  tacaml
   yojson)
  (preprocess
   (pps
