feat: large refactor with sublibraries

--- a/lib/indicators/dune
+++ b/lib/indicators/dune
@@ -31,6 +31,8 @@
    -open
    Containers
    -open
+   Longleaf_core
+   -open
    Ppx_yojson_conv_lib.Yojson_conv.Primitives
    -strict-sequence
    -safe-string)))
