--- a/lib/backend/dune
+++ b/lib/backend/dune
@@ -37,6 +37,8 @@
    -open
    Containers
    -open
+   Longleaf_core
+   -open
    Ppx_yojson_conv_lib.Yojson_conv.Primitives
    -strict-sequence
    -safe-string)))
