chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ server.exe
 elisp/flycheck_top.el
 lib/javascript/css.css
 lib/javascript/plotly_latest.css
+streamlit/__pycache__
 dune-odep.svg
 data/*.json
 _html/
