--- a/react/package.json
+++ b/react/package.json
@@ -42,6 +42,11 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "typescript": "^4.9.5"
   }
 }
