--- a/test/dune
+++ b/test/dune
@@ -1,7 +1,7 @@
 (executable
  (name test)
  (modes exe)
- (libraries alcotest astring longleaf-lib))
+ (libraries alcotest astring longleaf-lib eio eio.unix piaf uri))
 
 ; This fails at runtime, so just build the executable
 
