--- a/strategies/dune
+++ b/strategies/dune
@@ -17,7 +17,8 @@
   landmarks
   tacaml
   longleaf-lib
-  piaf)
+  cohttp
+  cohttp-eio)
  (preprocess
   (pps ppx_deriving.std ppx_yojson_conv ppx_variants_conv ppx_fields_conv)))
 
