chore: update .opam

--- a/longleaf-lib.opam
+++ b/longleaf-lib.opam
@@ -21,7 +21,8 @@ depends: [
   "containers-data"
   "ocamlgraph"
   "eio_main"
-  "piaf"
+  "cohttp"
+  "cohttp-eio"
   "tacaml"
   "fileutils"
   "ocamlformat"
