--- a/lib/apis/dune
+++ b/lib/apis/dune
@@ -2,8 +2,8 @@
  (name longleaf_apis)
  (modules :standard)
  (public_name longleaf-lib.apis)
- (instrumentation
-  (backend landmarks))
+ ;(instrumentation
+ ; (backend landmarks))
  (libraries
   longleaf_core
   longleaf_bars
