--- a/lib/dune
+++ b/lib/dune
@@ -2,8 +2,8 @@
  (name longleaf)
  (modules :standard)
  (public_name longleaf-lib)
- (instrumentation
-  (backend landmarks))
+ ; (instrumentation
+ ;  (backend landmarks))
  (libraries
   longleaf_core
   longleaf_util
@@ -21,7 +21,6 @@
   iter
   uuidm
   cmdliner
-  landmarks
   tacaml
   cohttp
   cohttp-eio
