--- a/lib/state/dune
+++ b/lib/state/dune
@@ -2,8 +2,8 @@
  (name longleaf_state)
  (modules :standard)
  (public_name longleaf-lib.state)
- (instrumentation
-  (backend landmarks))
+ ; (instrumentation
+ ;  (backend landmarks))
  (libraries
   longleaf_core
   longleaf_bars
