--- a/bin/dune
+++ b/bin/dune
@@ -1,9 +1,9 @@
 (executables
- (names longleaf longleaf_downloader longleaf_shutdown longleaf_server)
+ (names longleaf longleaf_downloader
+ longleaf_server)
  (public_names
   longleaf
   longleaf_downloader
-  longleaf_shutdown
   longleaf_server)
  (package longleaf-strategies)
  (libraries
