feat: battery runner

--- a/lib/battery/dune
+++ b/lib/battery/dune
@@ -2,7 +2,12 @@
  (name longleaf_battery)
  (modules :standard)
  (public_name longleaf-lib.battery)
- (libraries longleaf_core longleaf_state containers)
+ (libraries
+  longleaf_core
+  longleaf_state
+  longleaf_bars
+  longleaf_util
+  containers)
  (preprocess
   (pps ppx_deriving.std)))
 
